fix: fixed alignment of elements in grid

--- a/frontend/src/components/HouseBlock/HouseBlock.css
+++ b/frontend/src/components/HouseBlock/HouseBlock.css
@@ -5,17 +5,12 @@
     "Source Han Sans CN", sans-serif;
 }
 
-.main-container {
-    display: flex;
-    align-items: center;
-    max-width: 300px;  /* Adjust this if needed */
-    margin: 0 auto;
-    padding: 20px; /* Add padding for spacing */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visibility */
-  }
+.main-container-house {
+    overflow: hidden;
+}
 
-.main-container,
-.main-container * {
+.main-container-house,
+.main-container-house * {
     box-sizing: border-box;
 }
 
@@ -26,7 +21,7 @@ button {
     outline: 0;
 }
 
-.main-container {
+.main-container-house {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,7 +36,7 @@ button {
     box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.06);
 }
 
-.hr-divider {
+.hr-divider-house {
     width: 100%;
     height: 0.5px;
     background-color: #E4E9EE; /* Чорна риска */
@@ -50,7 +45,7 @@ button {
     border: none; /* Видалення стандартних рамок */
 }
 
-.image-block {
+.image-block-house {
     align-self: stretch;
     flex-grow: 1;
     flex-shrink: 0;
@@ -62,11 +57,19 @@ button {
     no-repeat center;
     background-size: cover;
 }
-.frame-house-info {
-    flex-grow: 1; /* Allow the info section to grow and take up remaining space */
-  }
-  
-.frame-house-name-places {
+.frame-house-info-house {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: stretch;
+    flex-wrap: nowrap;
+    flex-shrink: 0;
+    gap: 24px;
+    position: relative;
+    padding: 24px 24px 24px 24px;
+    z-index: 1;
+}
+.frame-house-name-places-house {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -77,7 +80,7 @@ button {
     position: relative;
     z-index: 2;
 }
-.frame-house-name {
+.frame-house-name-house {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -88,7 +91,7 @@ button {
     position: relative;
     z-index: 3;
 }
-.trembita {
+.trembita-house {
     flex-shrink: 0;
     flex-basis: auto;
     position: relative;
@@ -103,7 +106,7 @@ button {
     z-index: 4;
 }
 
-.frame-house-places {
+.frame-house-places-house {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -113,7 +116,7 @@ button {
     width: 85px;
     z-index: 6;
 }
-.frame-house-places-divider {
+.frame-house-places-divider-house {
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
@@ -123,7 +126,7 @@ button {
     width: 73px;
     z-index: 7;
 }
-.user {
+.user-house {
     flex-shrink: 0;
     position: relative;
     width: 16px;
@@ -131,7 +134,7 @@ button {
     z-index: 8;
     overflow: hidden;
 }
-.icon {
+.icon-house {
     position: relative;
     width: 17px;
     height: 14px;
@@ -140,7 +143,7 @@ button {
     background-size: 100% 100%;
     z-index: 9;
 }
-.span-misc {
+.span-misc-house {
     flex-shrink: 0;
     flex-basis: auto;
     position: relative;
@@ -156,7 +159,7 @@ button {
     z-index: 10;
 }
 
-.button-frame {
+.button-frame-house {
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
@@ -170,7 +173,7 @@ button {
     border: none;
     z-index: 12;
 }
-.button {
+.button-house {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -187,20 +190,17 @@ button {
     overflow: hidden;
     border-radius: 8px;
 }
-.view-text {
-    width: 120px; /* Set a specific width for the button */
-    text-align: center; /* Center the text horizontally */
-    padding: 10px; /* Add padding for better appearance */
-    border: none; /* Remove default button border */
-    background-color: #007bff; /* Button background color */
-    color: white; /* Button text color */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    transition: background-color 0.3s ease; /* Smooth transition for background color */
-  }
-  
-
-.house-image {
-    width: 120px; /* Adjust the width of the image */
-    height: auto; /* Maintain aspect ratio */
-    margin-right: 20px; /* Add some spacing between the image and other elements */
-  }
+.view-text-house {
+    flex-shrink: 0;
+    flex-basis: auto;
+    position: relative;
+    height: 20px;
+    color: #03597c;
+    font-family: Poppins, var(--default-font-family);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
+    white-space: nowrap;
+    z-index: 14;
+}
